MINPACK backend not segfaulting any more, solution of example not correct, need to implement variable transofmations

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ symneqsys/minpack/lmder1.f
 symneqsys/minpack/lmpar.f
 symneqsys/minpack/qrfac.f
 symneqsys/minpack/qrsolv.f
+symneqsys/minpack/prebuilt/*.o
 symneqsys/nleq2/nleq2.f
 symneqsys/nleq2/wnorm.f
 symneqsys/nleq2/linalg_nleq2.f
