--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy>=1.6.1
 cython>=0.19.1
 sympy>=0.7.3
 mako>=0.5.0
+future>=0.12.3
 https://github.com/bjodah/cinterpol/archive/v0.3.4.tar.gz
 https://github.com/bjodah/pycompilation/archive/v0.3.0.tar.gz
 https://github.com/bjodah/symvarsub/archive/v0.0.10.tar.gz
