--- a/.drone.yml
+++ b/.drone.yml
@@ -5,8 +5,8 @@ env:
   - MY_SERVER=symneqsys@hera.physchem.kth.se
 script:
   - if [[ "$DRONE_BRANCH" =~ ^v[0-9]+.[0-9]?* ]]; then export SYMNEQSYS_RELEASE_VERSION=$DRONE_BRANCH; echo ${SYMNEQSYS_RELEASE_VERSION} | tail -c +2 > __conda_version__.txt; fi
-  - pip install mpmath pycompilation pycodeexport git+https://github.com/sympy/sympy.git git+https://github.com/bjodah/symvarsub/symvarsub.git
-  - pip3 install mpmath pycompilation pycodeexport git+https://github.com/sympy/sympy.git git+https://github.com/bjodah/symvarsub/symvarsub.git
+  - pip install mpmath pycompilation pycodeexport git+https://github.com/sympy/sympy.git git+https://github.com/bjodah/symvarsub.git
+  - pip3 install mpmath pycompilation pycodeexport git+https://github.com/sympy/sympy.git git+https://github.com/bjodah/symvarsub.git
   - PYTHONPATH=$(pwd) ./scripts/run_tests.sh --cov symneqsys --cov-report html
   - python2 setup.py sdist
   - ./scripts/generate_docs.sh
