--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ future>=0.12.3
 https://github.com/bjodah/cinterpol/archive/v0.3.4.tar.gz
 https://github.com/bjodah/pycompilation/archive/v0.3.0.tar.gz
 https://github.com/bjodah/symvarsub/archive/v0.0.10.tar.gz
+cython_gsl
